<resources>
    <string name="app_name">WearMaster</string>
    <string name="shuffle_for_you">Shuffle for you stations</string>
    <string name="shuffle_my_stations">Shuffle my stations</string>
    <string name="send_image">Send image</string>
    <string name="send_feedback">Feedback</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="toggle_play">Toggle Play</string>
    <string name="thumb_up">Thumb up</string>
    <string name="thumb_down">Thumb down</string>
    <string name="open_player">Open Player</string>
    <string name="send_recently_played">Send Recently Played</string>
</resources>
