<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vlabs.androiweartest.MainActivity">

    <Button
        android:id="@+id/toggle_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_play" />

    <Button
        android:id="@+id/thumb_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thumb_up" />

    <Button
        android:id="@+id/thumb_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thumb_down" />

</LinearLayout>
